--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,8 @@ jdk:
 # If a build is successful, the code is submitted for coverage analysis
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+install: true
+script: ./mvnw clean install
+cache:
+ directories:
+  - $home/.m2
